--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "This is a platform to visit various github repos.",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon backend/index.js"
+    "dev": "nodemon backend/index.js",
+    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend",
+    "start": "node backend/index.js"
   },
   "type": "module",
   "repository": {
